# Switchboard

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/plugins/plugins/agents-together/: .codex-plugin
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
agent_comm/: backup.py  cli.py  db.py  doctor.py  paths.py  repository.py
docs/: agent-comm-cli-v2.md
docs/smoke-tests/: fresh-agent-sessions.md
docs/superpowers/plans/: 2026-06-29-agent-comm-cli-v2.md  2026-06-29-agents-together.md  2026-06-29-switchboard-rename.md
docs/superpowers/specs/: 2026-06-29-agent-comm-cli-v2.md  2026-06-29-agents-together-design.md
examples/: implementer-blocker.md  implementer-question.md  planner-handoff.md  ready-for-review.md  review-findings.md
plugins/agents-together/.codex-plugin/: plugin.json
scripts/: agent-comm  build_codex_plugin.py  switchboard  validate_skill_protocols.py
skills/coordinate-as-implementer/: SKILL.md
skills/coordinate-as-implementer/references/: agent-communication-protocol.md
skills/coordinate-as-planner/: SKILL.md
skills/coordinate-as-planner/references/: agent-communication-protocol.md  switchboard-protocol.md
switchboard/: backup.py  cli.py  db.py  doctor.py  export.py  paths.py  repository.py
tests/: conftest.py  test_backup_doctor_export.py  test_ci_precommit_config.py  test_cli_mailbox.py  test_db_schema.py  test_docs_smoke.py  test_package_cli.py  test_paths.py  test_repository.py  test_skills_manifests_examples.py
(+2 files in other folders)
