[project]
name = "agent-comm"
version = "0.1.0"
description = "Durable local mailbox for independent coding agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agent-comm = "agent_comm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
