[project]
name = "switchboard"
version = "0.2.0"
description = "A local mailbox for deliberate agent coordination"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
switchboard = "switchboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
